--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+		<div class="outer-box">
+			<h1>Simple Interest Calculator</h1>
+			<div class="inner-box">
+				<div style="display: table-row">
+					<div style="display: table-cell">Amount</div>
+					<div style="display: table-cell; width: 50px"></div>
+					<div style="display: table-cell">
+						<input type="number" id="principal" value="1000000">
+					</div>
+				</div>
+				<div style="display: table-row">
+					<div style="display: table-cell">Interest Rate</div>
+					<div style="display: table-cell"></div>
+					<div style="display: table-cell">
+						<input type="range" id="rate" min="0" max="20" step="0.5" value="3.5" onchange="this.nextElementSibling.value = this.value + '%'">
+						<output>3.5%</output>
+					</div>
+				</div>
+				<div style="display: table-row">
+					<div style="display: table-cell">No. of Years</div>
+					<div style="display: table-cell"></div>
+					<div style="display: table-cell">
+						<select type="number" id="years">
+							<option>1</option>
+							<option>2</option>
+							<option selected="selected">3</option>
+							<option>4</option>
+							<option>5</option>
+							<option>6</option>
+							<option>7</option>
+							<option>8</option>
+							<option>9</option>
+							<option>10</option>
+						</select>
+					</div>
+				</div>
+				<div style="display: table-row">
+					<div style="display: table-cell">
+						<button onclick="compute()">Compute Interest</button>
+					</div>
+					<div style="display: table-cell"></div>
+					<div style="display: table-cell"></div>
+				</div>
+			</div>
+			<br>
+			<div class="inner-box">
+				<div style="display: table-row">
+					<div style="display: table-cell">
+						<div id="result"></span>
+					</div>
+				</div>
+			</div>
+		</div>
     </body>
 </html>
