--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+	<title>Web App – Simple Interest Calculator</title>
     </head>
     <body>
 		<div class="outer-box">
@@ -18,7 +19,7 @@
 					<div style="display: table-cell">Interest Rate</div>
 					<div style="display: table-cell"></div>
 					<div style="display: table-cell">
-						<input type="range" id="rate" min="0" max="20" step="0.5" value="3.5" onchange="this.nextElementSibling.value = this.value + '%'">
+						<input type="range" id="rate" min="1" max="20" step="0.5" value="3.5" onchange="this.nextElementSibling.value = this.value + '%'">
 						<output>3.5%</output>
 					</div>
 				</div>
@@ -55,6 +56,9 @@
 						<div id="result"></span>
 					</div>
 				</div>
+			</div>
+			<div class="credit">
+			© Everyone Can Get Rich
 			</div>
 		</div>
     </body>
