use js to populate html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
     <head>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 	<title>Web App – Simple Interest Calculator</title>
     </head>
@@ -27,18 +26,7 @@
 					<div style="display: table-cell">No. of Years</div>
 					<div style="display: table-cell"></div>
 					<div style="display: table-cell">
-						<select type="number" id="years">
-							<option>1</option>
-							<option>2</option>
-							<option selected="selected">3</option>
-							<option>4</option>
-							<option>5</option>
-							<option>6</option>
-							<option>7</option>
-							<option>8</option>
-							<option>9</option>
-							<option>10</option>
-						</select>
+						<select name="years" id="years"></select>
 					</div>
 				</div>
 				<div style="display: table-row">
@@ -61,5 +49,6 @@
 			© Everyone Can Get Rich
 			</div>
 		</div>
+		<script src="script.js"></script>
     </body>
 </html>
